fix(ui): adjust clouds for better visibility on all screen sizes

--- a/static/root.css
+++ b/static/root.css
@@ -35,7 +35,7 @@ body {
     object-position: bottom;
     display: block;
     position: relative;
-    margin-top: -38rem;
+    margin-top: -50vh;
     z-index: -1;
 }
 
